feat: add ReportURL handler
